...
        .overlay(
          RoundedRectangle(cornerRadius: 8)
            .stroke(lineWidth: 2)
            .foregroundColor(Color.gray)
        )
        .gesture(memorySwipe)
        .accessibilityIdentifier("memoryDisplay")
      Text("M")
    }.padding(.bottom).padding(.horizontal, 5)
  }
}

