...
/// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
/// THE SOFTWARE.

import SwiftUI

struct DisplayView: View {
    @Binding var display: String
    
    var body: some View {
        HStack {
            if display.isEmpty {
                Text("0")
                    .accessibilityIdentifier("display")
...
